prevented typewriter function overflow

--- a/app/assets/stylesheets/sections/_home.scss
+++ b/app/assets/stylesheets/sections/_home.scss
@@ -30,6 +30,7 @@
 
 #home {
   text-align: left;
+  height: 200px;
 }
 
 #typewriter {
